# AgentBasedModel

./: .gitignore  Agent Based Model.sln  Agent Based Model.vcxproj  Agent Based Model.vcxproj.filters  CMakeLists.txt  LICENSE  README.md  ToDo.txt  agent.cpp  agent.h  main.cpp
appendix/kAverageWashroomTime/: proof_latex.tex
appendix/kWashroomProbability/: proof_latex.tex  references.bib
assets/: graph_drawing.py  period1.json  period2.json  period3.json  period4.json  period5.json  plot_population.py  prob_checker.py
assets/master_courses/: master_schedule.csv  schedule_maker.py
doc/: dev_log.txt
export/: graph_drawing.py  plot_population.m
include/: agent.h  agent.hh  classroom.hh  configure_agents.h  configure_agents.hh  graph_building.h  graph_building.hh  json.hpp  random_element.h  random_element.hh  simulation.h  simulation.hh
proofs/kAverageWashroomTime/: proof_latex.tex  references.bib
proofs/kWashroomProbability/: proof_latex.tex
src/: AgentBasedModel.cpp  agent.cpp  classroom.cpp  configure_agents.cpp  graph_building.cpp  main.cpp  simulation.cpp
tools/: analyze_data.sh  at_home_plot.py  class_sizes.py  duration_of_outbreak.py  infected_portion.py  infected_visualization.py  peak_times.py  plot_data.sh  plot_population.py  probability_of_outbreak.py  secondary_infections.py
